fixed: column-gap property of icons & width property of icon

--- a/sass/_benefits.sass
+++ b/sass/_benefits.sass
@@ -5,9 +5,9 @@
     display: flex
     justify-content: space-between
     margin-top: 70px
+    column-gap: 70px
   &__icon
     text-align: center
-    width: 25%
     font-size: 14px
     img
       display: block
